Can view pending requests noq. Press "Panel" Button on categories, Then press the "Requests" Card

--- a/app/src/main/res/layout/activity_incoming_requests.xml
+++ b/app/src/main/res/layout/activity_incoming_requests.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".inventoryManagement.incoming_requests">
+    tools:context=".inventoryManagement.inventory_incoming_requests">
 
     <!--top appbar-->
     <android.support.design.widget.AppBarLayout
