--- a/app/src/main/res/layout/layout_message_card.xml
+++ b/app/src/main/res/layout/layout_message_card.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="8dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
     android:id="@+id/parentMessageCardLayout"
     >
 
@@ -14,7 +15,6 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/backgroundLight"
         app:cardElevation="8dp"
-        app:cardCornerRadius="4dp"
         >
         <LinearLayout
             android:layout_width="match_parent"
