Description will now be displayed in "View Plans" Resized the recylerView for viewPlans.

--- a/app/src/main/res/layout/activity_main_plan.xml
+++ b/app/src/main/res/layout/activity_main_plan.xml
@@ -59,7 +59,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="670dp"
             card_view:cardUseCompatPadding="true"
             card_view:cardElevation="5dp"
             card_view:cardCornerRadius="5dp"
