--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -44,6 +44,20 @@
                 android:textStyle="normal"
                 android:typeface="sans" />
 
+            <TextView
+                android:id="@+id/des_d"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:textColor="@color/cardview_dark_background"
+                android:text="descrption"
+                android:layout_below="@id/name_n"
+                android:textSize="12sp"
+                android:textStyle="normal"
+                android:typeface="sans"/>
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
