--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -39,6 +39,18 @@
             android:elevation="8dp"
             app:layout_scrollFlags="scroll|enterAlways|snap"
             >
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/db_profile_image"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:civ_border_width="1dp"
+                app:civ_border_color="@color/backgroundDark"
+                android:layout_gravity="right"
+                android:layout_marginRight="12dp"
+
+                />
+
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
