--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -110,7 +110,7 @@
             android:hint="@string/email_address">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/email_editText"
+                android:id="@+id/su_email_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/email_editText"
@@ -130,7 +130,7 @@
             >
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/password_editText"
+                android:id="@+id/su_password_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/email_editText"
@@ -152,7 +152,7 @@
             >
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/confPassword_editText"
+                android:id="@+id/su_confPassword_editText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/email_editText"
@@ -165,7 +165,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.button.MaterialButton
-            android:id="@+id/ContinueBtn"
+            android:id="@+id/su_ContinueBtn"
             style="@style/Widget.MaterialComponents.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
