--- a/app/src/main/res/layout/activity_compose_chat_room.xml
+++ b/app/src/main/res/layout/activity_compose_chat_room.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".miscellaneous.ComposeChatRoomActivity">
 
-</android.support.constraint.ConstraintLayout>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/testProfilePic"
+        android:layout_width="150dp"
+        android:layout_height="150dp" />
+
+</LinearLayout>
