--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".miscellaneous.chatRoomActivity"
-
     >
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/cr_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+
         >
         <android.support.v7.widget.Toolbar
             android:id="@+id/cr_toolbar"
@@ -30,7 +31,10 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/cr_chatLogRecycView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginBottom="82dp"
+        >
 
     </android.support.v7.widget.RecyclerView>
 
