--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -20,7 +20,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
             <ImageView
                 android:id="@+id/image_i"
                 android:layout_width="match_parent"
@@ -54,6 +53,20 @@
                 android:textColor="@color/cardview_dark_background"
                 android:text="descrption"
                 android:layout_below="@id/name_n"
+                android:textSize="12sp"
+                android:textStyle="normal"
+                android:typeface="sans"/>
+
+            <TextView
+                android:id="@+id/id_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:textColor="@color/cardview_dark_background"
+                android:text="id"
+                android:layout_below="@id/des_d"
                 android:textSize="12sp"
                 android:textStyle="normal"
                 android:typeface="sans"/>
