--- a/app/src/main/res/layout/layout_message_bubble.xml
+++ b/app/src/main/res/layout/layout_message_bubble.xml
@@ -3,8 +3,11 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/bubble_parentlayout"
-    android:layout_marginTop="8dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginTop="12dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    >
 
     <!-- row1-->
     <android.support.v7.widget.CardView
@@ -26,7 +29,8 @@
                 android:layout_marginRight="4dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:textSize="13sp"
+                android:textSize="15sp"
+                android:textColor="#000"
 
                 app:layout_constraintBottom_toTopOf="@+id/mb_timeStamp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                  android:background="@color/backgroundLight"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
