Edit Item added. Click the item in edit Item to edit. Delete Item added. Long press the item and select delete to delete.

--- a/app/src/main/res/layout/inventory_edit_list_row.xml
+++ b/app/src/main/res/layout/inventory_edit_list_row.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="70dp"
@@ -39,41 +37,20 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/item_row_name"
+                android:id="@+id/edit_item_row_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:text="@string/inventory_item_name"
+                android:text="Edit item row name"
                 android:textSize="22sp"
                 app:layout_constraintStart_toEndOf="@+id/edit_item_row_image"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/item_row_qty"
-                android:layout_width="77dp"
-                android:layout_height="28dp"
-                android:layout_marginEnd="28dp"
-                android:layout_marginRight="28dp"
-                android:layout_marginTop="8dp"
-                android:text="@string/inventory_item_qty"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/item_row_unit"
-                android:layout_width="77dp"
-                android:layout_height="28dp"
-                android:layout_marginEnd="28dp"
-                android:layout_marginRight="28dp"
-                android:layout_marginTop="36dp"
-                android:text="Item Qty"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
+
 </LinearLayout>
