--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,10 +5,13 @@
     <dimen name="um_top_spacing">60dp</dimen>
     <dimen name="um_bottom_spacing">20dp</dimen>
     <dimen name="um_side_spacing">16dp</dimen>
+    <dimen name="margins_four">4dp</dimen>
+    <dimen name="margins_eight">8dp</dimen>
 
     <!--common-->
     <dimen name="um_subheading_spacing_top">-3dp</dimen>
     <dimen name="um_padding_shadow">5dp</dimen>
+    <dimen name="um_shadow_elevation">8dp</dimen>
 
     <!--UI specific-->
     <dimen name="um_btn_top_spacing">30dp</dimen>
@@ -26,11 +29,23 @@
     <dimen name="um_login_option_text_size">16sp</dimen>
     <dimen name="db_card_title">22dp</dimen>
 
+    <!--Messages Func Related-->
+    <dimen name="message_bubble_width">220dp</dimen>
+    <dimen name="message_bubble_sidemargin">10dp</dimen>
+    <dimen name="message_bubble_top_spacer">12dp</dimen>
+
+    <!--MessageBubble TextSized-->
+    <dimen name="message_body_textsize">15sp</dimen>
+    <dimen name="message_sender_textsize">14sp</dimen>
+    <dimen name="message_timestamp_textsize">10sp</dimen>
 
     <!--dashboard test screen-->
     <dimen name="gl_padding">20dp</dimen>
     <dimen name="card_size">170dp</dimen>
     <dimen name="cornerRadius">4dp</dimen>
+
+
+
 
 
     <!-- Default screen margins, per the Android Design guidelines. -->
